--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,06/08/2025 12:23:11,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-01_CAD_XMKB.dwg,Model,07/08/2025 12:49:10,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-01_CAD_XMKB.dwg,Model,07/08/2025 12:50:30,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-01_CAD_XMKB.dwg,Model,07/08/2025 12:58:59,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-01_CAD_XMKB.dwg,Model,07/08/2025 13:14:19,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-01_CAD_XMKB.dwg,Model,07/08/2025 13:18:01,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\08_TUGAS-02_CAD_XMKB.dwg,Model,20/08/2025 09:12:34,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\08_TUGAS-02_CAD_XMKB.dwg,Model,20/08/2025 11:34:39,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\33_T03_CAD_XMKB.dwg,Model,20/08/2025 12:12:10,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\RANGKA ROBOT XI-MK-B.dwg,Model,25/08/2025 14:57:51,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1.40265,
-C:\Users\MEKA-20\Desktop\08_Tugas-04_CAD_XMKB.dwg,Model,27/08/2025 12:37:59,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-F:\FORMAT AUTOCAD H4.dwg,Model,27/08/2025 13:18:07,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-F:\CAD ULANGAN.dwg,Model,28/08/2025 09:02:33,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-F:\16_UP-01_CAD_XMKD.dwg,Model,28/08/2025 10:37:01,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-F:\27_UP1_XMKD.dwg,Model,28/08/2025 11:36:54,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,03/09/2025 08:42:11,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,03/09/2025 11:04:24,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,03/09/2025 12:01:26,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,03/09/2025 12:21:15,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,03/09/2025 12:22:47,MEKA-20,Fax,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,03/09/2025 12:23:23,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-F:\10_TUGAS KUMPULAN_CAD_XMKB.dwg,Model,10/09/2025 13:32:20,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1.015,
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,24/09/2025 08:33:19,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\Drawing1.dwg,Model,24/09/2025 13:04:11,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Documents\08_PTS_XMKC.dwg,Model,25/09/2025 09:58:23,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\TUGAS PARDAN.dwg,Model,25/09/2025 10:00:59,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-04_CAD_XMKC.dwg,Model,04/10/2025 12:07:57,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-04_CAD_XMKC.dwg,Model,04/10/2025 12:11:41,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-04_CAD_XMKC.dwg,Model,04/10/2025 12:12:44,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-04_CAD_XMKC.dwg,Model,04/10/2025 12:14:14,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
-C:\Users\MEKA-20\Downloads\08_TUGAS-04_CAD_XMKC.dwg,Model,04/10/2025 12:16:40,MEKA-20,Microsoft Print to PDF,A4,0.0393701:1,
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Belajar Koding</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f3f3;
+            color: #333;
+            text-align: center;
+            margin: 50px;
+        }
 
+        h1 {
+            color: #007BFF;
+        }
+
+        p {
+            font-size: 18px;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Belajar Koding</h1>
+    <p>Selamat datang di halaman belajar koding dengan HTML!</p>
+
+</body>
+</html>
